--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
-            android:name="WelcomeScreen"
+            android:name=".Main1Activity"
             android:exported="false"
-            android:label="@string/title_activity_greeting_screen" />
+            android:label="@string/title_activity_main1" />
         <activity
-            android:name="MainScreen"
+            android:name=".WelcomeScreen"
             android:exported="true"
-            android:label="@string/title_activity_main_screen" >
+            android:label="WelcomeScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
