--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
             android:exported="false"
             android:label="@string/title_activity_main1" />
         <activity
-            android:name=".WelcomeScreen"
+            android:name=".WallpaperDriver"
             android:exported="true"
             android:label="WelcomeScreen">
             <intent-filter>
