--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.myapplication" >
+    package="com.example.myapplication">
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication" >
+        android:theme="@style/Theme.MyApplication">
+        <activity
+            android:name=".Support"
+            android:exported="false" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="false"
@@ -20,7 +23,7 @@
         <activity
             android:name=".WelcomeScreen"
             android:exported="true"
-            android:label="WelcomeScreen" >
+            android:label="WelcomeScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
