main functionality to change wallpaper has been added, needs some visual cleaning up. also added a register and support button.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         <activity
             android:name=".WelcomeScreen"
             android:exported="true"
-            android:label="WelcomeScreen">
+            android:label="The Wallpaper Driver">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
